test/optimizations/autoLocalAccess/stencil/illegalOffset.good
illegalOffset.chpl:14: error: unresolved call '-(int(64), "1")'
$CHPL_HOME/modules/internal/ChapelBase.chpl:530: note: this candidate did not match: -(a: int(8), b: int(8))
illegalOffset.chpl:14: note: because actual argument #1 with type 'int(64)'
$CHPL_HOME/modules/internal/ChapelBase.chpl:530: note: is passed to formal 'a: int(8)'
illegalOffset.chpl:14: note: other candidates are:
$CHPL_HOME/modules/internal/ChapelBase.chpl:531: note:   -(a: int(16), b: int(16))
$CHPL_HOME/modules/internal/ChapelBase.chpl:532: note:   -(a: int(32), b: int(32))
note: and 90 other candidates, use --print-all-candidates to see them
